<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_bg"
    android:padding="18dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/title_txt"
        android:textSize="30sp" />
    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            app:cardUseCompatPadding="true"
            android:elevation="6dp"
            app:cardCornerRadius="8dp"
            android:layout_width="match_parent"
            android:layout_height="90dp">

            <TextView
                android:id="@+id/grateful_txt"
                android:text="@string/grateful_txt"
                android:layout_gravity="center"
                android:textSize="19sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
    <Button
        android:id="@+id/start_button"
        android:text="@string/get_started_txt"
        android:textColor="@color/colorPrimary"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Button>


</LinearLayout>