<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/gradient_bg"
    android:padding="18dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <AutoCompleteTextView
        android:id="@+id/email"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></AutoCompleteTextView>
    <EditText
        android:id="@+id/password"
        android:layout_marginTop="16dp"
        android:hint="@string/pass_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/log_in"
        android:text="Login"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/or_txt"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/create_acc_btn_login"
        android:text="Create Account"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>


</LinearLayout>